--- a/.project
+++ b/.project
@@ -14,4 +14,11 @@
 	<natures>
 		<nature>org.eclipse.jdt.core.javanature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>img</name>
+			<type>2</type>
+			<location>/Users/90303116/Documents/Eclipse Projects/ap-java-review/img</location>
+		</link>
+	</linkedResources>
 </projectDescription>
